/*
 * SPDX-License-Identifier: Apache-2.0
 *
 * The OpenSearch Contributors require contributions made to
 * this file be licensed under the Apache-2.0 license or a
 * compatible open source license.
 *
 * Modifications Copyright OpenSearch Contributors. See
 * GitHub history for details.
 */

syntax = "proto3";
package org.opensearch.action.admin.cluster.node.info.proto;

import "org/opensearch/action/admin/cluster/node/info/NodesInfoProto.proto";

option java_outer_classname = "NodesInfoProtoService";

message StringList {
  repeated string str_list = 1;
}

message Metrics {
  bool all = 1;
  StringList metric_list = 2;
}

message NodesInfoRequestProto {
  Metrics metrics = 1;
  string timeout = 2;
  repeated string nodeIds = 3;
}

message NodesInfoResponseProto {
  string clusterName = 1;
  repeated NodesInfo nodesInfo = 2;
}

service NodesInfoService {
  rpc GetNodesInfo(NodesInfoRequestProto) returns (NodesInfoResponseProto) {}
  rpc StreamNodesInfo(NodesInfoRequestProto) returns (stream NodesInfoResponseProto) {}
}
