/*
 * SPDX-License-Identifier: Apache-2.0
 *
 * The OpenSearch Contributors require contributions made to
 * this file be licensed under the Apache-2.0 license or a
 * compatible open source license.
 */

package org.opensearch.grpc.services.nodesInfo;

import org.opensearch.proto.

public class NodesInfoServiceImpl extends NodesInfoServiceGrpc.NodesInfoServiceImplBase {

    @Override
    public void getNodesInfo(NodesInfoRequest request, StreamObserver<NodesInfoResponse> responseObserver) {

    }

    @Override
    public void streamNodesInfo(NodesInfoRequest request, StreamObserver<NodesInfoResponse> responseObserver) {

    }
}
